# desarrollo-software-nube

./: .gitignore  Dockerfile  README.md  app.py  config.py  database.py  docker-compose-minimal.yml  docker-compose.yml  env.template  prometheus.yml
Postman/: API de Compresion de Archivos Equipo 2.postman_collection.json  Api Compresion de archivos.postman_environment.json
api/: Dockerfile  app.py  broker.py  config.py  database.py  entrypoint.sh  minimal.Dockerfile  minimal.sh  pyproject.toml  requirements.txt  tasks.py
api/models/: __init__.py  file.py  task.py  user.py
api/resources/: __init__.py  file_resource.py  ping.py  signin.py  signup.py  task_resource.py
api/schemas/: __init__.py  task_schema.py  user_schema.py
api/tasks/: compress.py  make_celery.py
api/utils/: authenticate.py  gcp_pubsub.py  tasks_compress.py
nginx/: Dockerfile  nginx.conf
resources/: signin.py  task_resource.py
thunder/version1/: thunder-collection_desarrollo-software-nube.json  thunder-environment_desarrollo-software-nube.json
utils/: gcp_storage.py
